Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
-
72680ce7e2e32222078178596bf3793e6e848a36
Description
When building Qt 5.5 on ARM with -qreal float configure option build fails due to the following error:
g++ -c -include .pch/Qt5Gui -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -Wformat -Wformat-security -fmessage-length=0 -march=armv6 -mlittle-endian -mfpu=vfp -mfloat-abi=softfp -D__SOFTFP__ -Wno-psabi -O3 -fvisibility=hidden -fvisibility-inlines-hidden -std=c++0x -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_TSLIB -DQT_NO_USING_NAMESPACE -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_ENABLE_HARFBUZZ_NG -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtGui -I../../include/QtGui/5.5.0 -I../../include/QtGui/5.5.0/QtGui -Iimage -I../../include/QtCore/5.5.0 -I../../include/QtCore/5.5.0/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/linux-g++ -o .obj/qpathclipper.o painting/qpathclipper.cpp g++ -c -include .pch/Qt5Gui -O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector --param=ssp-buffer-size=4 -Wformat -Wformat-security -fmessage-length=0 -march=armv6 -mlittle-endian -mfpu=vfp -mfloat-abi=softfp -D__SOFTFP__ -Wno-psabi -O3 -fvisibility=hidden -fvisibility-inlines-hidden -std=c++0x -fno-exceptions -Wall -W -D_REENTRANT -fPIC -DQT_NO_TSLIB -DQT_NO_USING_NAMESPACE -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_ENABLE_HARFBUZZ_NG -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I../../include -I../../include/QtGui -I../../include/QtGui/5.5.0 -I../../include/QtGui/5.5.0/QtGui -Iimage -I../../include/QtCore/5.5.0 -I../../include/QtCore/5.5.0/QtCore -I../../include/QtCore -I.moc -I../../mkspecs/linux-g++ -o .obj/qpdf.o painting/qpdf.cpp painting/qpdf.cpp: In member function 'int QPdfEnginePrivate::generateRadialGradientShader(const QRadialGradient*, const QTransform&, bool)': painting/qpdf.cpp:2157:41: error: ambiguous overload for 'operator<<' (operand types are 'QPdf::ByteStream' and 'double') "/Coords [" << p0.x() << p0.y() << r0 << p1.x() << p1.y() << r1 << "]\n" ^ painting/qpdf.cpp:2157:41: note: candidates are: painting/qpdf.cpp:180:17: note: QPdf::ByteStream& QPdf::ByteStream::operator<<(char) ByteStream &ByteStream::operator <<(char chr) ^ painting/qpdf.cpp:218:17: note: QPdf::ByteStream& QPdf::ByteStream::operator<<(qreal) ByteStream &ByteStream::operator <<(qreal val) { ^ painting/qpdf.cpp:225:17: note: QPdf::ByteStream& QPdf::ByteStream::operator<<(int) ByteStream &ByteStream::operator <<(int val) { ^ make[2]: *** [.obj/qpdf.o] Error 1 make[2]: *** Waiting for unfinished jobs.... In file included from ../../include/QtCore/qvector.h:1:0, from ../../include/QtGui/../../src/gui/painting/qpolygon.h:37, from ../../include/QtGui/qpolygon.h:1, from ../../include/QtGui/../../src/gui/painting/qmatrix.h:37, from ../../include/QtGui/qmatrix.h:1, from ../../include/QtGui/../../src/gui/painting/qtransform.h:36, from ../../include/QtGui/qtransform.h:1, from ../../include/QtGui/../../src/gui/image/qimage.h:37, from ../../include/QtGui/qimage.h:1, from ../../include/QtGui/../../src/gui/image/qpixmap.h:42, from ../../include/QtGui/qpixmap.h:1, from ../../include/QtGui/../../src/gui/image/qbitmap.h:37, from ../../include/QtGui/qbitmap.h:1, from kernel/qt_gui_pch.h:63: ../../include/QtCore/../../src/corelib/tools/qvector.h: In member function '{anonymous}::TreeNode {anonymous}::SegmentTree::buildTree(int, int, int, const {anonymous}::RectF&)': ../../include/QtCore/../../src/corelib/tools/qvector.h:380:12: warning: assuming signed overflow does not occur when assuming that (X + c) < X is always false [-Wstrict-overflow] } else if (!d->capacityReserved && asize < d->size && asize < (oldAlloc >> 1)) { // we want to shrink ^
Attachments
Issue Links
- is duplicated by
-
QTBUG-49010 qpdf.cpp does not compile with -qreal float on ARM linux with gcc 4.9
-
- Closed
-