Fix for build with -qreal float

Resolve ambiguity with function calls (due to double->float conversion),
use qreal where needed intead of explicit 'double'.

Change-Id: I28f1fb4a2b424b1399fb082a36ba9cff666f7c62
Task-number: QTBUG-47433
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>

cregit: 72680ce7e2e32222078178596bf3793e6e848a36 https://github.com/qt/qtbase/commit/72680ce7e2e32222078178596bf3793e6e848a36